k8s-manifests/OLD_BKP/deployment_fixed.yaml
##########frontend-canary.yaml##########
# -------------------------------
# 2️⃣ Canary Frontend Deployment (v2)
# -------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-canary
  namespace: socialecho
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: v2
  template:
    metadata:
      labels:
        app: frontend
        version: v2
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: frontend-canary-ng   # Updated for EKS nodegroup
      containers:
      - name: frontend
        image: kvikash668/frontend:15
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1024Mi"

---


apiVersion: v1
kind: Service
metadata:
  name: frontend-canary
  namespace: socialecho
spec:
  type: ClusterIP
  selector:
    app: frontend
    version: v2   # Only canary pods
  ports:
    - port: 80
      targetPort: 80

      protocol: TCP
##############
############frontend-server.yaml##############
# -------------------------------
# 1️⃣ Stable Frontend Deployment (v1)
# -------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-stable
  namespace: socialecho
spec:
  replicas: 9
  selector:
    matchLabels:
      app: frontend
      version: v1
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: frontend-canary-ng     # Updated for EKS nodegroup
      containers:
      - name: frontend
        image: mukheshdn/frontend:02
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1024Mi"

---

# -------------------------------
# 3️⃣ Frontend Service (Common)
# -------------------------------
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: socialecho
spec:
  type: ClusterIP
  selector:
    app: frontend
    version: v1   # Only stable pods
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP




#########grafana ingress##########
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80

########grafna_values.yaml########
grafana:
  enabled: true

  adminUser: admin
  adminPassword: admin12345   # 🔐 Grafana login

  service:
    type: LoadBalancer

  persistence:
    enabled: true
    size: 5Gi

prometheus:
  prometheusSpec:
    retention: 7d

  service:
    type: LoadBalancer   # Prometheus UI exposed via ALB/NLB

alertmanager:
  enabled: true

  service:
    type: ClusterIP

kubeStateMetrics:
  enabled: true

nodeExporter:
  enabled: true
############ingress.yaml########
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socialecho-ingress
  namespace: socialecho
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    # FRONTEND CANARY
    alb.ingress.kubernetes.io/actions.frontend: |
      {
        "type": "forward",
        "forwardConfig": {
          "targetGroups": [
            { "serviceName": "frontend", "servicePort": "80", "weight": 90 },
            { "serviceName": "frontend-canary", "servicePort": "80", "weight": 10 }
          ]
        }
      }

    # BACKEND CANARY
    alb.ingress.kubernetes.io/actions.backend: |
      {
        "type": "forward",
        "forwardConfig": {
          "targetGroups": [
            { "serviceName": "backend", "servicePort": "4000", "weight": 90 },
            { "serviceName": "backend-canary", "servicePort": "4000", "weight": 10 }
          ]
        }
      }

spec:
  ingressClassName: alb
  rules:
    - host: www.socialecho.com
      http:
        paths:

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  name: use-annotation

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: use-annotation

##########mongo-express-server.yaml##########
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: socialecho
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      # 👇 Node affinity to ensure pods run only on backend-db nodegroup
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: eks.amazonaws.com/nodegroup
                    operator: In
                    values:
                      - db-ng # 👈 your nodegroup name
      containers:
      - name: mongo-express
        image: mongo-express:latest
        ports:
        - containerPort: 8081
        resources:
          limits:
            memory: "256Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: socialecho
spec:
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 32081
  type: NodePort
  
#############mongo-server.yaml##########
# ===============================================
# 1️⃣ StorageClass - Automatic EBS Provisioning
# ===============================================
apiVersion: storage.k8s.io/v1
kind: StorageClass
metadata:
  name: ebs-gp3
provisioner: ebs.csi.aws.com
volumeBindingMode: WaitForFirstConsumer
parameters:
  type: gp3
  fsType: ext4

---

# ===============================================
# 3️⃣ MongoDB Deployment
# ===============================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: socialecho
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: db-ng
      containers:
      - name: mongo
        image: mongo:6
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-pvc

---

# ===============================================
# 4️⃣ MongoDB Service
# ===============================================
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: socialecho
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017

##########node-canary.yaml##########
# ===============================================
# 🧪 Canary Backend Deployment (v2)
# ===============================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-canary
  namespace: socialecho
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v2
  template:
    metadata:
      labels:
        app: backend
        version: v2
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: frontend-canary-ng    # Canary node group
      containers:
      - name: backend
        image: kvikash668/backend:15
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4000
        resources:
          requests:
            cpu: "100m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1024Mi"
---

# ===============================================
# 🧪 Canary Backend Service
# ===============================================
apiVersion: v1
kind: Service
metadata:
  name: backend-canary
  namespace: socialecho
spec:
  type: ClusterIP
  selector:
    app: backend
    version: v2    # Only Canary Pods
  ports:
    - port: 4000
      targetPort: 4000

     




###########node-server.yaml##########
# ===============================================
# 1️⃣ Backend Deployment
# ===============================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: socialecho
spec:
  replicas: 9
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: backend-ng    # Updated for EKS nodegroup
      containers:
      - name: backend
        image: mukheshdn/backend:02
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4000
        
---

# ===============================================
# 2️⃣ Backend Service
# ===============================================
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: socialecho
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 4000
      targetPort: 4000
 




###############prometheus-ingress.yaml############
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-kube-prometheus-prometheus
            port:
              number: 9090

###############secrets.yaml############
apiVersion: v1
kind: ConfigMap
metadata:
  name: backend-config
  namespace: socialecho
data:
  PORT: "4000"
---
apiVersion: v1
kind: Secret
metadata:
  name: backend-secret
  namespace: socialecho
type: Opaque
stringData:
  MONGODB_URI: "mongodb://admin:admin@mongo:27017/socialecho?authSource=admin"
  SECRET: "dev_jwt_secret"
  REFRESH_SECRET: "dev_jwt_refresh_secret"
#####################
################namespace.yaml################
apiVersion: v1
kind: Namespace
metadata:
  name: socialecho

######################grafna_values.yaml################
grafana:
  enabled: true

  adminUser: admin
  adminPassword: admin12345   # 🔐 Grafana login

  service:
    type: LoadBalancer

  persistence:
    enabled: true
    size: 5Gi

prometheus:
  prometheusSpec:
    retention: 7d

  service:
    type: LoadBalancer   # Prometheus UI exposed via ALB/NLB

alertmanager:
  enabled: true

  service:
    type: ClusterIP

kubeStateMetrics:
  enabled: true

nodeExporter:
  enabled: true

################################
